fix element position / alignment, fix global color assignments

--- a/Bidding/ClientApp/src/app/shared/components/breadcrumb/breadcrumb.component.scss
+++ b/Bidding/ClientApp/src/app/shared/components/breadcrumb/breadcrumb.component.scss
@@ -1,6 +1,5 @@
 @import "../../../../sass/variables";
 
 ol.breadcrumb {
-  background-color: $gray-200;
   padding-top: 50px;
 }
