--- a/Bidding/ClientApp/src/sass/_variables.scss
+++ b/Bidding/ClientApp/src/sass/_variables.scss
@@ -84,7 +84,8 @@ $grid-breakpoints: (
 );
 
 // Global assignments
-$body-bg: $gray-200;
+$body-bg: $gray-100;
+$breadcrumb-bg: $gray-100;
 $link-hover-decoration: underline;
 
 // todo: kke: clean-up
