--- a/Bidding/ClientApp/src/sass/ngx-datatable.scss
+++ b/Bidding/ClientApp/src/sass/ngx-datatable.scss
@@ -33,7 +33,7 @@
   }
 
   .datatable-footer {
-    background-color: $white;
+    background-color: $gray-100;
     color: $black;
 
     .datatable-pager {
